--- a/Views/Ingredients/Index.cshtml
+++ b/Views/Ingredients/Index.cshtml
@@ -1,13 +1,13 @@
 ﻿@model IEnumerable<RazorPageFoodie.Models.Ingredient>
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Ingredients";
 }
 
-<h1>Index</h1>
+<h1>Ingredient List</h1>
 
-<p>
-    <a asp-action="Create" class="btn btn-primary"><i class="fa-solid fa-cauldron"></i>  Add Ingredient</a>
+<p>   
+    <a asp-action="Create" class="btn btn-primary"><i class="fa-solid fa-bowl-rice"></i>   Add Ingredient</a>
 </p>
 <table class="table">
     <thead>
@@ -37,9 +37,9 @@
                 @Html.DisplayFor(modelItem => item.ImageData)
             </td>
             <td>
-                <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
+                    <a asp-action="Edit" asp-route-id="@item.Id" class="btn btn-primary"><i class="fa-solid fa-pen-to-square"></i></a>
+                    <a asp-action="Details" asp-route-id="@item.Id" class="btn btn-success"><i class="fa-solid fa-circle-info"></i></a>
+                    <a asp-action="Delete" asp-route-id="@item.Id" class="btn btn-danger"><i class="fa-solid fa-trash-can"></i></a>
             </td>
         </tr>
 }
