--- a/Views/Ingredients/Create.cshtml
+++ b/Views/Ingredients/Create.cshtml
@@ -14,14 +14,14 @@
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
-                <label asp-for="IngrediantName" class="control-label"></label>
-                <input asp-for="IngrediantName" class="form-control" />
-                <span asp-validation-for="IngrediantName" class="text-danger"></span>
+                <label asp-for="Name" class="control-label"></label>
+                <input asp-for="Name" class="form-control" />
+                <span asp-validation-for="Name" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Introduction" class="control-label"></label>
-                <textarea asp-for="Introduction" class="form-control" cols=40 rows=8 /></textarea>
-                <span asp-validation-for="Introduction" class="text-danger"></span>
+                <label asp-for="Description" class="control-label"></label>
+                <textarea asp-for="Description" class="form-control" cols=40 rows=8 /></textarea>
+                <span asp-validation-for="Description" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="ImageData" class="control-label"></label>
